@@ -521,6 +521,18 @@
 			return $this;
 		}
 		
+		/**
+		 * @return TimestampRange
+		**/
+		public function toTimestampRange()
+		{
+			return
+				TimestampRange::create(
+					$this->getStart()->toTimestamp(),
+					$this->getEnd()->toTimestamp()
+				);
+		}
+		
 		protected function checkType($value)
 		{
 			Assert::isTrue(
